# Devtriage

./: .gitignore  LICENSE  Project.md  README.md  RELEASING.md  devtriage.py  pyproject.toml
.github/workflows/: test.yml
src/devtriage/: __init__.py  capture.py  cli.py  runners.py
src/devtriage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_runner_detection.py  test_sanitization.py
