[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtriage"
version = "0.1.0"
description = "CLI for reproducing, capturing, and reporting failing test runs."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "devtriage contributors" }]
license = { file = "LICENSE" }
dependencies = []
keywords = ["triage", "cli", "testing", "pytest", "bug report"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
py-modules = ["devtriage"]

[project.urls]
Homepage = "https://github.com/DevMubarak1/Devtriage"
"Issue Tracker" = "https://github.com/DevMubarak1/Devtriage/issues"

[project.scripts]
devtriage = "devtriage:main"

